[gd_scene load_steps=24 format=3 uid="uid://bs2h0e4x7qqbw"]

[ext_resource type="Script" path="res://UI/script/son.gd" id="1_4fixb"]
[ext_resource type="Script" path="res://UI/script/options.gd" id="1_mc4k5"]
[ext_resource type="FontFile" uid="uid://bn43t0lpdvrl4" path="res://UI/art/Font/KAPH/OpenType (.otf)/Kaph-Italic.otf" id="2_1p55h"]
[ext_resource type="Texture2D" uid="uid://bojo7hcrqlqmp" path="res://UI/art/Button/Son ON.png" id="3_o3h6e"]
[ext_resource type="Texture2D" uid="uid://wee22puu0o52" path="res://UI/art/Button/Son OFF.png" id="4_kqaxt"]
[ext_resource type="Texture2D" uid="uid://1ibi2u8scukw" path="res://UI/art/Button/Musique ON.png" id="5_hedk8"]
[ext_resource type="Texture2D" uid="uid://dmfa4qkclpbfc" path="res://UI/art/Button/Musique OFF.png" id="6_ey6ub"]
[ext_resource type="Script" path="res://UI/script/musique.gd" id="6_v838k"]

[sub_resource type="Theme" id="Theme_hv0pr"]
Label/colors/font_color = Color(1, 0, 0.733333, 1)
Label/colors/font_shadow_color = Color(0.501961, 0, 0.376471, 1)
Label/constants/shadow_outline_size = 20
Label/fonts/font = ExtResource("2_1p55h")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nqjt2"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 3
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_l70ji"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 7
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 7.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8vut"]
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 10
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 10.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8fx1l"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 3
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50
expand_margin_left = 10.0
expand_margin_top = 3.0
expand_margin_right = 10.0
expand_margin_bottom = 10.0

[sub_resource type="Theme" id="Theme_kwg4q"]
Button/colors/font_color = Color(1, 0, 0.733333, 1)
Button/colors/font_focus_color = Color(0.86346, 2.21401e-06, 0.489164, 1)
Button/colors/font_hover_color = Color(0.862745, 0, 0.490196, 1)
Button/colors/font_pressed_color = Color(0.862745, 0, 0.490196, 1)
Button/fonts/font = ExtResource("2_1p55h")
Button/styles/focus = SubResource("StyleBoxFlat_nqjt2")
Button/styles/hover = SubResource("StyleBoxFlat_l70ji")
Button/styles/normal = SubResource("StyleBoxFlat_s8vut")
Button/styles/pressed = SubResource("StyleBoxFlat_8fx1l")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ktpbx"]
content_margin_top = 7.0
bg_color = Color(0.326738, 0.26043, 0.298994, 1)
border_width_bottom = 3
border_color = Color(0.237021, 0.177179, 0.215978, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_q47lq"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 3
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_i7pjs"]
content_margin_top = 7.0
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 7
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_mpjg3"]
bg_color = Color(0.345098, 0.254902, 0.337255, 1)
border_width_bottom = 7
border_color = Color(0.313726, 0.227451, 0.305882, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_3xp5p"]
bg_color = Color(0.501961, 0, 0.376471, 1)
border_width_bottom = 10
border_color = Color(0.401794, 1.04203e-05, 0.298874, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_dcge6"]
bg_color = Color(0.344955, 0.256136, 0.33687, 1)
border_width_bottom = 10
border_color = Color(0.312229, 0.22882, 0.304998, 1)
corner_radius_top_left = 50
corner_radius_top_right = 50
corner_radius_bottom_right = 50
corner_radius_bottom_left = 50

[sub_resource type="Theme" id="Theme_72i38"]
Button/colors/font_color = Color(1, 0, 0.733333, 1)
Button/colors/font_focus_color = Color(0.86346, 2.21401e-06, 0.489164, 1)
Button/colors/font_hover_color = Color(0.862745, 0, 0.490196, 1)
Button/colors/font_pressed_color = Color(0.862745, 0, 0.490196, 1)
Button/fonts/font = ExtResource("2_1p55h")
Button/styles/disabled = SubResource("StyleBoxFlat_ktpbx")
Button/styles/focus = SubResource("StyleBoxFlat_q47lq")
Button/styles/hover = SubResource("StyleBoxFlat_i7pjs")
Button/styles/hover_pressed = SubResource("StyleBoxFlat_mpjg3")
Button/styles/normal = SubResource("StyleBoxFlat_3xp5p")
Button/styles/pressed = SubResource("StyleBoxFlat_dcge6")

[sub_resource type="Theme" id="Theme_xc1ed"]
CheckButton/icons/checked = ExtResource("3_o3h6e")
CheckButton/icons/unchecked = ExtResource("4_kqaxt")

[sub_resource type="Theme" id="Theme_3mw6k"]
CheckButton/icons/checked = ExtResource("5_hedk8")
CheckButton/icons/unchecked = ExtResource("6_ey6ub")

[node name="Options" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mc4k5")

[node name="Titre" type="Label" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 200.0
grow_horizontal = 2
theme = SubResource("Theme_hv0pr")
theme_override_font_sizes/font_size = 50
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Retour" type="Button" parent="."]
texture_filter = 1
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -160.0
offset_top = 232.0
offset_right = 160.0
offset_bottom = 280.095
grow_horizontal = 2
grow_vertical = 2
focus_mode = 0
theme = SubResource("Theme_kwg4q")
theme_override_font_sizes/font_size = 25
text = "Retour
"

[node name="Son" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -91.0
offset_top = -89.0
offset_right = -51.0
offset_bottom = -49.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4fixb")

[node name="Barre 1" type="Button" parent="Son"]
texture_filter = 1
layout_mode = 0
offset_left = -8.0
offset_right = 17.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 2" type="Button" parent="Son"]
texture_filter = 1
layout_mode = 0
offset_left = 42.0
offset_right = 67.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 3" type="Button" parent="Son"]
texture_filter = 1
layout_mode = 0
offset_left = 92.0
offset_right = 117.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 4" type="Button" parent="Son"]
texture_filter = 1
layout_mode = 0
offset_left = 142.0
offset_right = 167.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 5" type="Button" parent="Son"]
texture_filter = 1
layout_mode = 0
offset_left = 192.0
offset_right = 217.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="CheckButton Son" type="CheckButton" parent="Son"]
layout_mode = 0
offset_left = -92.0
offset_top = -3.0
offset_right = -48.0
offset_bottom = 37.0
scale = Vector2(2, 2)
focus_mode = 0
theme = SubResource("Theme_xc1ed")
button_pressed = true

[node name="Musique" type="Control" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -90.0
offset_top = 29.0
offset_right = -90.0
offset_bottom = 29.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("6_v838k")

[node name="Barre 1" type="Button" parent="Musique"]
texture_filter = 1
layout_mode = 0
offset_left = -8.0
offset_right = 17.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 2" type="Button" parent="Musique"]
texture_filter = 1
layout_mode = 0
offset_left = 42.0
offset_right = 67.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 3" type="Button" parent="Musique"]
texture_filter = 1
layout_mode = 0
offset_left = 92.0
offset_right = 117.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 4" type="Button" parent="Musique"]
texture_filter = 1
layout_mode = 0
offset_left = 142.0
offset_right = 167.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="Barre 5" type="Button" parent="Musique"]
texture_filter = 1
layout_mode = 0
offset_left = 192.0
offset_right = 217.0
offset_bottom = 75.0
focus_mode = 0
theme = SubResource("Theme_72i38")
theme_override_font_sizes/font_size = 25
toggle_mode = true

[node name="CheckButton Musique" type="CheckButton" parent="Musique"]
layout_mode = 0
offset_left = -92.0
offset_top = -3.0
offset_right = -48.0
offset_bottom = 37.0
scale = Vector2(2, 2)
focus_mode = 0
theme = SubResource("Theme_3mw6k")
button_pressed = true

[connection signal="pressed" from="Retour" to="." method="_on_retour_pressed"]
[connection signal="toggled" from="Son/Barre 1" to="Son" method="_on_barre_1_toggled"]
[connection signal="toggled" from="Son/Barre 2" to="Son" method="_on_barre_2_toggled"]
[connection signal="toggled" from="Son/Barre 3" to="Son" method="_on_barre_3_toggled"]
[connection signal="toggled" from="Son/Barre 4" to="Son" method="_on_barre_4_toggled"]
[connection signal="toggled" from="Son/Barre 5" to="Son" method="_on_barre_5_toggled"]
[connection signal="toggled" from="Son/CheckButton Son" to="Son" method="_on_check_button_son_toggled"]
[connection signal="toggled" from="Musique/Barre 1" to="Musique" method="_on_barre_1_toggled"]
[connection signal="toggled" from="Musique/Barre 2" to="Musique" method="_on_barre_2_toggled"]
[connection signal="toggled" from="Musique/Barre 3" to="Musique" method="_on_barre_3_toggled"]
[connection signal="toggled" from="Musique/Barre 4" to="Musique" method="_on_barre_4_toggled"]
[connection signal="toggled" from="Musique/Barre 5" to="Musique" method="_on_barre_5_toggled"]
[connection signal="toggled" from="Musique/CheckButton Musique" to="Musique" method="_on_check_button_musique_toggled"]
